# PropBot

./: .gitignore  Calibration.ino  Calibration_EEPROM.ino  MB1202_V2.0.ino  README.md  mini_rc.h
MB1202_V2.0/: MB1202_V2.0.ino
RC/: main.ino  motor.ino  pinout.h  rc_commands.h  rc_commands.ino  wheel.h  wheel.ino
RC_Calibration/: Calibration_EEPROM.ino  EEPROM_address.h  array_function.cpp  array_function.h  pinout.h  threshold_function.cpp  threshold_function.h
common/propbot_common_msgs/: CMakeLists.txt  package.xml
doc/: MotorControllers.md  Other Research.md  Radar.md  Radio Link & GUI Option 1.md  Radio Link & GUI Option 2.md  Remote Controller.md
docker/: build_image.sh  run_x_container.sh
docs/: Getting-Started.md  Mission-Execution-User-Guide.md  RC-User-Guide.md
mission_command_centre/mapviz_plugins/: CMakeLists.txt  mapviz_plugins.xml  package.xml
mission_command_centre/mapviz_plugins/include/mapviz_plugins/: navsat_plugin.h  plan_mission_plugin.h
mission_command_centre/mapviz_plugins/msg/: Mission.msg  MissionCommand.msg  MissionCommandCode.msg
mission_command_centre/mapviz_plugins/src/: navsat_plugin.cc  plan_mission_plugin.cc
mission_command_centre/mapviz_plugins/ui/: navsat_config.ui  plan_mission_config.ui
propbot_common_msgs/: CMakeLists.txt
propbot_model/: CMakeLists.txt  package.xml
scripts/: eigen.xml  opencv.xml  propbot_3pp_autonomy.xml  propbot_3pp_mapviz.xml  setup_third_party_build.sh
setup/: Jetson_TX1_OS.md  Mission_Command_Vehicle_Comm.md
simulation/propbot_gazebo/: package.xml
simulation/propbot_gazebo/Media/models/: student_union.dae
simulation/propbot_gazebo/launch/: playpen.launch  playpen_people.launch  propbot_empty_world.launch  propbot_playpen.launch  propbot_playpen_people.launch  propbot_ubc_student_union.launch  propbot_ubc_student_union_people.launch  spawn_propbot.launch  ubc_student_union.launch  ubc_student_union_people.launch
simulation/propbot_gazebo/worlds/: clearpath_playpen.world  clearpath_playpen_people.world  ubc_student_union.world  ubc_student_union_people.world
util/propbot_util/: CMakeLists.txt  package.xml
vehicle_autonomy/propbot_autonomy/: CMakeLists.txt  package.xml
vehicle_autonomy/propbot_autonomy/launch/: autonomy.launch  map_waypoint_mission.launch
vehicle_autonomy/propbot_control/: CMakeLists.txt  package.xml
vehicle_autonomy/propbot_control/config/: control.yaml  gazebo_interface.yaml  localization.yaml  twist_mux.yaml
vehicle_autonomy/propbot_control/launch/: control.launch  remove_ground.launch
vehicle_autonomy/propbot_description/: CMakeLists.txt  package.xml
vehicle_autonomy/propbot_description/launch/: description.launch
vehicle_autonomy/propbot_description/meshes/: propbot_base_link.STL  propbot_wheel.STL
vehicle_autonomy/propbot_description/urdf/: decorations.urdf.xacro  passive_wheel.urdf.xacro  propbot.urdf.xacro  propbot_model.urdf  wheel.urdf.xacro
vehicle_autonomy/propbot_description/urdf/accessories/: VLP-16.urdf.xacro  VLP-16_mount.urdf.xacro  kinect_camera.urdf.xacro  realsense_d435.urdf.xacro  sensor_arch.urdf.xacro  sick_lms1xx_mount.urdf.xacro
vehicle_autonomy/propbot_drivers/: CMakeLists.txt  README.md  package.xml
vehicle_autonomy/propbot_drivers/launch/: ublox_gps.launch
vehicle_autonomy/propbot_localization/: CMakeLists.txt  package.xml
vehicle_autonomy/propbot_localization/config/simulation/: ekf.yaml
vehicle_autonomy/propbot_localization/launch/: ekf_gps_tf.launch
vehicle_autonomy/propbot_mission/: CMakeLists.txt  README.md  package.xml
vehicle_autonomy/propbot_mission/include/propbot_mission/: mission.h  mission.hh  mission_command_interface.hh  mission_handler.h  mission_handler.hh  waypoint.h  waypoint.hh
vehicle_autonomy/propbot_mission/launch/: execute_mission.launch  send_mission.launch
vehicle_autonomy/propbot_mission/missions/: test_mission_1.txt
vehicle_autonomy/propbot_mission/src/: execute_mission.cc  mission.cc  mission_command_interface.cc  mission_handler.cc  send_mission.cc  waypoint.cc
vehicle_autonomy/propbot_navigation/: CMakeLists.txt  package.xml
vehicle_autonomy/propbot_navigation/config/: costmap_common.yaml  costmap_global_laser.yaml  costmap_global_slam.yaml  costmap_global_static.yaml  costmap_local.yaml  planner.yaml  planners.yaml
vehicle_autonomy/propbot_navigation/launch/: gmapping.launch  move_base.launch
vehicle_autonomy/propbot_object_detection/: CMakeLists.txt  README.md  package.xml
vehicle_autonomy/propbot_object_detection/config/: darknet.yaml  yolov3-tiny.yaml  yolov3.yaml
vehicle_autonomy/propbot_object_detection/include/: bounding_box_transformer.hh  bounding_cylinder.hh
vehicle_autonomy/propbot_object_detection/launch/: detect_objects.launch
vehicle_autonomy/propbot_object_detection/src/: bounding_box_transformer.cc  publish_people.cc
vehicle_autonomy/propbot_perception/: CMakeLists.txt  package.xml
vehicle_autonomy/propbot_perception/launch/: remove_ground.launch
vehicle_autonomy/propbot_rviz/: package.xml
vehicle_autonomy/propbot_rviz/rviz/: robot.rviz
vehicle_autonomy/propbot_slam/: CMakeLists.txt  package.xml
vehicle_autonomy/propbot_slam/config/: husky.lua  navsat_transform.yaml  propbot.lua
vehicle_autonomy/propbot_slam/launch/: cartographer.launch  husky.launch  navsat_transform.launch  publish_slam_poses.launch  slam.launch
vehicle_autonomy/propbot_slam/src/: publish_slam_pose.cc
vehicle_autonomy/propbot_state_estimation/: CMakeLists.txt  package.xml
vehicle_autonomy/propbot_state_estimation/config/: map_ekf_filter.yaml  odom_ekf_filter.yaml  odometry_ekf_filter.yaml  rgbd_odometry.yaml
vehicle_autonomy/propbot_state_estimation/launch/: ekf_filters.launch  odometry_ekf_filter.launch  state_estimation.launch  visual_odometry.launch
vehicle_autonomy/propbot_util/: CMakeLists.txt  README.md
vehicle_interface/autonomy_interface/: CMakeLists.txt  README.md  ROS_message.ino  main.ino  node.h  package.xml  rc_commands.h  wheel.h
vehicle_ui/propbot_gui/: CMakeLists.txt  package.xml
vehicle_ui/propbot_gui/launch/: propbot_mapviz.launch
(+140 files in other folders)
