<?xml version="1.0"?>
<package>
  <name>propbot_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo simulation for propbot</description>
  
  <maintainer email="divyabudihal@gmail.com">Divya Budihal</maintainer>
  <maintainer email="nancyhong321@gmail.com">Nancy Hong</maintainer>
  <maintainer email="hannahvsawiuk@gmail.com">Hannah Sawiuk</maintainer>
  <maintainer email="jerryli20160808@gmail.com">Jerry Li</maintainer>
  <maintainer email="jackguo380p@gmail.com">Jack Guo</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>propbot_control</run_depend>
  <run_depend>propbot_description</run_depend>
  <run_depend>multimaster_launch</run_depend>
  <run_depend>pointcloud_to_laserscan</run_depend>
  <run_depend>rostopic</run_depend>

<export>
  <gazebo_ros gazebo_media_path="${prefix}" />
</export>
</package>
