<?xml version="1.0"?>
<package>
  <name>propbot_autonomy</name>
  <version>0.0.1</version>
  <description>Propbot autonomy</description>
  
  <maintainer email="divyabudihal@gmail.com">Divya Budihal</maintainer>
  <maintainer email="nancyhong321@gmail.com">Nancy Hong</maintainer>
  <maintainer email="hannahvsawiuk@gmail.com">Hannah Sawiuk</maintainer>
  <maintainer email="jerryli20160808@gmail.com">Jerry Li</maintainer>
  <maintainer email="jackguo380p@gmail.com">Jack Guo</maintainer>
  
  <license>BSD</license>
`

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  
  <run_depend>propbot_description</run_depend>
  <run_depend>propbot_gazebo</run_depend>
  <run_depend>propbot_rviz</run_depend>
  <run_depend>propbot_navigation</run_depend>
  <run_depend>propbot_state_estimation</run_depend>
  <run_depend>propbot_mission</run_depend>
  <run_depend>propbot_slam</run_depend>
  <run_depend>propbot_object_detection</run_depend>

  <export>
  </export>
</package>
