<?xml version="1.0"?>
<package>
  <name>propbot_control</name>
  <version>0.0.1</version>
  <description>Differential drive controller for propbot</description>
  
  <maintainer email="divyabudihal@gmail.com">Divya Budihal</maintainer>
  <maintainer email="nancyhong321@gmail.com">Nancy Hong</maintainer>
  <maintainer email="hannahvsawiuk@gmail.com">Hannah Sawiuk</maintainer>
  <maintainer email="jerryli20160808@gmail.com">Jerry Li</maintainer>
  <maintainer email="jackguo380p@gmail.com">Jack Guo</maintainer>
  
  <license>BSD</license>
`
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>propbot_description</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>multimaster_launch</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>

  <export>
  </export>
</package>
