<?xml version="1.0"?>
<package>
  <name>propbot_description</name>
  <version>0.0.1</version>
  <description>Propbot robot description</description>
  
  <maintainer email="divyabudihal@gmail.com">Divya Budihal</maintainer>
  <maintainer email="nancyhong321@gmail.com">Nancy Hong</maintainer>
  <maintainer email="hannahvsawiuk@gmail.com">Hannah Sawiuk</maintainer>
  <maintainer email="jerryli20160808@gmail.com">Jerry Li</maintainer>
  <maintainer email="jackguo380p@gmail.com">Jack Guo</maintainer>
  
  <license>BSD</license>
`

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>realsense2_camera</run_depend>
  <run_depend>velodyne_gazebo_plugins</run_depend>

  <export>
  </export>
</package>
