<?xml version="1.0"?>
<package>
  <name>propbot_mission</name>
  <version>0.0.1</version>
  <description>Mission handling for propbot</description>
  
  <maintainer email="divyabudihal@gmail.com">Divya Budihal</maintainer>
  <maintainer email="nancyhong321@gmail.com">Nancy Hong</maintainer>
  <maintainer email="hannahvsawiuk@gmail.com">Hannah Sawiuk</maintainer>
  <maintainer email="jerryli20160808@gmail.com">Jerry Li</maintainer>
  <maintainer email="jackguo380p@gmail.com">Jack Guo</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>propbot_util</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>