<?xml version="1.0"?>
<package format="2">
  <name>propbot_slam</name>
  <version>0.0.0</version>
  <description>Propbot SLAM Configuration</description>

  <maintainer email="divyabudihal@gmail.com">Divya Budihal</maintainer>
  <maintainer email="nancyhong321@gmail.com">Nancy Hong</maintainer>
  <maintainer email="hannahvsawiuk@gmail.com">Hannah Sawiuk</maintainer>
  <maintainer email="jerryli20160808@gmail.com">Jerry Li</maintainer>
  <maintainer email="jackguo380@gmail.com">Jack Guo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <exec_depend>cartographer_ros</exec_depend>

  <export>
  </export>
</package>
