<?xml version="1.0"?>
<package>
  <name>propbot_vehicle_interface</name>
  <version>0.0.1</version>
  <description>Communication channel between Arduino and ROS computer via UART</description>
  
  <maintainer email="divyabudihal@gmail.com">Divya Budihal</maintainer>
  <maintainer email="nancyhong321@gmail.com">Nancy Hong</maintainer>
  <maintainer email="hannahvsawiuk@gmail.com">Hannah Sawiuk</maintainer>
  <maintainer email="jerryli20160808@gmail.com">Jerry Li</maintainer>
  <maintainer email="jackguo380@gmail.com">Jack Guo</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_embeddedlinux</run_depend>
  <run_depend>rosserial_windows</run_depend>
  <run_depend>rosserial_server</run_depend>
  <run_depend>rosserial_python</run_depend>

  <export>
  </export>
</package>
