<?xml version="1.0"?>
<package>
  <name>propbot_gui</name>
  <version>0.0.1</version>
  <description>Waypoint GUI for propbot</description>
  
  <maintainer email="divyabudihal@gmail.com">Divya Budihal</maintainer>
  <maintainer email="nancyhong321@gmail.com">Nancy Hong</maintainer>
  <maintainer email="hannahvsawiuk@gmail.com">Hannah Sawiuk</maintainer>
  <maintainer email="jerryli20160808@gmail.com">Jerry Li</maintainer>
  <maintainer email="jackguo380p@gmail.com">Jack Guo</maintainer>
  
  <license>BSD</license>
`
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>mapviz</run_depend>
  <run_depend>mapviz_plugins</run_depend>
  <run_depend>tile_map</run_depend>


  <export>
  </export>
</package>
